test/spec_vectors/i32/fail/module_58.wat
(module (func (result i32) (i32.div_u (i64.const 0) (f32.const 0))))